framec_tests/language_specific/csharp/v3_outline/positive/basic_outline.frm
@target csharp

system S {
    actions:
        DoIt() {
            // native body
        }
}
