framec_tests/language_specific/csharp/v3_outline/negative/handler_in_nonstate_block.frm
@target csharp

system S {
    machine:
        {
            e() {
                => $^
            }
        }
}

